--- a/src/sass/Header.scss
+++ b/src/sass/Header.scss
@@ -5,9 +5,9 @@
     color: $color-primary-green!important;
     flex-direction: column!important;
     justify-content: center;
-    height: 5vh;
 }
 
 .MuiTypography-h5 {
     font-weight: 500!important;
+    padding: .5rem 0;
 }
