added pagination to home page

--- a/src/sass/App.scss
+++ b/src/sass/App.scss
@@ -4,5 +4,8 @@ body {
 }
 
 .app {
-    height: 100vh;
+    min-height: 100vh!important;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
 }
