--- a/src/sass/Footer.scss
+++ b/src/sass/Footer.scss
@@ -4,6 +4,7 @@
     flex-direction: row!important;
     justify-content: space-between;
     margin-top: 2rem;
+    bottom: 0!important;
 }
 
 .MuiSvgIcon-root {
