--- a/src/sass/Footer.scss
+++ b/src/sass/Footer.scss
@@ -5,6 +5,10 @@
     justify-content: space-between;
     margin-top: 2rem;
     bottom: 0!important;
+    border-top: 1px solid #ccc;
+    box-shadow: 0 -2px 2px -2px #333 !important;
+    left: 0!important;
+    height: 6vh;
 }
 
 .MuiSvgIcon-root {
