added media queries

--- a/src/sass/App.scss
+++ b/src/sass/App.scss
@@ -8,4 +8,6 @@ body {
     display: flex;
     flex-direction: column;
     justify-content: space-between;
+
+    background: linear-gradient(to right bottom,  #8e9eab, #eef2f3, );
 }
