--- a/src/sass/Footer.scss
+++ b/src/sass/Footer.scss
@@ -11,6 +11,12 @@
     height: 6vh;
 }
 
+.MuiIconButton-label {
+    color: $color-primary!important;
+    fill: $color-primary;
+}
+
 .MuiSvgIcon-root {
-    color: $color-primary-green;
+    color: inherit!important;
+    fill: $color-primary!important;
 }
