--- a/src/sass/Header.scss
+++ b/src/sass/Header.scss
@@ -2,7 +2,7 @@
 
 .MuiAppBar-root {
     background-color: $color-white!important;
-    color: $color-primary-green!important;
+    color: $color-primary!important;
     justify-content: center;
 }
 
