--- a/src/sass/Pagination.scss
+++ b/src/sass/Pagination.scss
@@ -7,7 +7,7 @@
     align-items: center;
     padding: 0;
     list-style: none;
-    background-color: $color-primary-green;
+    background-color: $color-primary;
     border-radius: 3px;
     margin-top: 3rem;
     font-size: 1rem;
@@ -31,7 +31,7 @@
     }
 
     & a:hover {
-        background-color: $color-primary-green-light;
+        background-color: $color-primary-light;
         border-radius: 3px;
     }
 }
