--- a/src/sass/variables.scss
+++ b/src/sass/variables.scss
@@ -1,3 +1,3 @@
 $color-white: #fff;
-$color-primary-green: #1b5e20;
-$color-primary-green-light: #43a047;
+$color-primary: #542344;
+$color-primary-light: #96487d;
